--- a/index.html
+++ b/index.html
@@ -393,7 +393,104 @@
           </div>
         </div>
       </section>
+      <!-- FAQ -->
+      <section class="my-24">
+        <h3 class="lg:text-5xl text-4xl mb-5 font-semibold text-center">
+          Frequently Asked <span class="text-bike-primary">Questions</span>
+        </h3>
+
+        <div class="hero ">
+          <div class="hero-content flex-col lg:gap-24 lg:flex-row">
+            <img
+              src="/images//others/faq.png"
+              class="lg:max-w-sm max-w-1/3  "
+            />
+            <div>
+              <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">
+                  <Translate
+                    text="Click to open this one and close others"
+                  />What are the most important things I should know about
+                  riding a bike?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  <Translate
+                    text="Click to open this one and close others"
+                  />How can I tell if my helmet is old and I need a new one?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+                    architecto eos reprehenderit ipsam. Porro, neque tenetur
+                    natus amet eligendi reiciendis quaerat fuga rerum quod
+                    architecto dolor perferendis necessitatibus vitae! Quo.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  <Translate text="Click to open this one and close others" />My
+                  bike has been in storage is it safe to ride?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Atque, consequuntur. Tempora qui similique pariatur deserunt
+                    minus necessitatibus placeat aliquam, dicta doloremque
+                    voluptates itaque culpa. Eius amet assumenda dolorum
+                    quibusdam quas?
+                  </p>
+                </div>
+              </div>
+
+              <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  <Translate
+                    text="Click to open this one and close others"
+                  />What rules should I follow when riding my bike?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Ratione labore corporis aperiam hic quam nemo doloribus odit
+                    aliquid nostrum quidem cum aliquam impedit molestiae ducimus
+                    soluta corrupti, nisi consequuntur maxime!
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer p-10 bg-neutral text-neutral-content">
+  <div>
+   
+    <p>ACME Industries Ltd.<br/>Providing reliable tech since 1992</p>
+  </div> 
+  <div>
+    <span class="footer-title">Get the App</span> 
+
+    <div class="grid grid-col gap-4">
+      <a><img class="w-36" src="images/others/android.png" alt=""></a> 
+      <a><img class="w-36" src="images/others/ios.png" alt=""></a> 
+      
+    </div>
+  </div>
+</footer>
   </body>
 </html>
