--- a/index.html
+++ b/index.html
@@ -399,14 +399,11 @@
           Frequently Asked <span class="text-bike-primary">Questions</span>
         </h3>
 
-        <div class="hero ">
+        <div class="hero">
           <div class="hero-content flex-col lg:gap-24 lg:flex-row">
-            <img
-              src="/images//others/faq.png"
-              class="lg:max-w-sm max-w-1/3  "
-            />
+            <img src="/images//others/faq.png" class="lg:max-w-sm max-w-1/3" />
             <div>
-              <div class="collapse collapse-arrow ">
+              <div class="collapse collapse-arrow">
                 <input type="radio" name="my-accordion-2" checked="checked" />
                 <div class="collapse-title text-xl font-medium">
                   <Translate
@@ -423,7 +420,7 @@
                   </p>
                 </div>
               </div>
-              <div class="collapse collapse-arrow ">
+              <div class="collapse collapse-arrow">
                 <input type="radio" name="my-accordion-2" />
                 <div class="collapse-title text-xl font-medium">
                   <Translate
@@ -439,7 +436,7 @@
                   </p>
                 </div>
               </div>
-              <div class="collapse collapse-arrow ">
+              <div class="collapse collapse-arrow">
                 <input type="radio" name="my-accordion-2" />
                 <div class="collapse-title text-xl font-medium">
                   <Translate text="Click to open this one and close others" />My
@@ -456,7 +453,7 @@
                 </div>
               </div>
 
-              <div class="collapse collapse-arrow ">
+              <div class="collapse collapse-arrow">
                 <input type="radio" name="my-accordion-2" />
                 <div class="collapse-title text-xl font-medium">
                   <Translate
@@ -478,19 +475,31 @@
       </section>
     </main>
     <footer class="footer p-10 bg-neutral text-neutral-content">
-  <div>
-   
-    <p>ACME Industries Ltd.<br/>Providing reliable tech since 1992</p>
-  </div> 
-  <div>
-    <span class="footer-title">Get the App</span> 
+      <div>
+        <div class="flex gap-3">
+          <p>Download Now</p>
+          <p>License</p>
+        </div>
 
-    <div class="grid grid-col gap-4">
-      <a><img class="w-36" src="images/others/android.png" alt=""></a> 
-      <a><img class="w-36" src="images/others/ios.png" alt=""></a> 
-      
-    </div>
-  </div>
-</footer>
+        <div class="flex gap-3 pb-4">
+          <p>About</p>
+          <p>Features</p>
+          <p>Pricing</p>
+          <p>Careers</p>
+          <p>Help</p>
+          <p>Privacy Policy</p>
+        </div>
+        <small>© 2020 bike. All rights reserved</small>
+      </div>
+
+      <div>
+        <span class="footer-title">Get the App</span>
+
+        <div class="grid grid-col gap-4">
+          <a><img class="w-36" src="images/others/android.png" alt="" /></a>
+          <a><img class="w-36" src="images/others/ios.png" alt="" /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
