--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <button class="btn bg-bike-primary text-white">Purchase</button>
             </div>
             <div class="flex">
-              <img src="/images//slider/bike1.png" class="w-[600px]" />
+              <img src="images/slider/bike1.png" class="w-[600px]" />
             </div>
           </div>
           <div
@@ -401,7 +401,7 @@
 
         <div class="hero">
           <div class="hero-content flex-col lg:gap-24 lg:flex-row">
-            <img src="/images//others/faq.png" class="lg:max-w-sm max-w-1/3" />
+            <img src="images/others/faq.png" class="lg:max-w-sm max-w-1/3" />
             <div>
               <div class="collapse collapse-arrow">
                 <input type="radio" name="my-accordion-2" checked="checked" />
