--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <button class="btn bg-bike-primary text-white">Purchase</button>
             </div>
             <div class="flex">
-              <img src="/images//slider/bike2.png" class="w-[600px]" />
+              <img src="images/slider/bike2.png" class="w-[600px]" />
             </div>
           </div>
           <div
@@ -155,7 +155,7 @@
               <button class="btn bg-bike-primary text-white">Purchase</button>
             </div>
             <div class="flex">
-              <img src="/images//slider/bike3.png" class="w-[600px]" />
+              <img src="images/slider/bike3.png" class="w-[600px]" />
             </div>
           </div>
           <div
@@ -180,7 +180,7 @@
               <button class="btn bg-bike-primary text-white">Purchase</button>
             </div>
             <div class="flex">
-              <img src="/images/slider/bike4.png" class="w-[600px]" />
+              <img src="images/slider/bike4.png" class="w-[600px]" />
             </div>
           </div>
           <div
@@ -203,7 +203,7 @@
           <!-- latest bikes-1 -->
           <div class="card bg-base-100 shadow-xl mb-2">
             <figure>
-              <img src="/images//others/latest1.png" alt="Shoes" />
+              <img src="images/others/latest1.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
@@ -219,7 +219,7 @@
           <!-- latest bikes-2 -->
           <div class="card bg-base-100 shadow-xl mb-2">
             <figure>
-              <img src="/images//others/latest2.png" alt="Shoes" />
+              <img src="images/others/latest2.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
@@ -235,7 +235,7 @@
           <!-- latest bikes-3 -->
           <div class="card bg-base-100 shadow-xl">
             <figure>
-              <img src="/images//others/latest3.png" alt="Shoes" />
+              <img src="images/others/latest3.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
@@ -259,7 +259,7 @@
           <!-- first review -->
           <div class="card bg-base-100 p-9 border border-gray-400">
             <figure>
-              <img class="w-36" src="/images//others/user-1.png" alt="Shoes" />
+              <img class="w-36" src="images/others/user-1.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <p>
@@ -304,7 +304,7 @@
           <!-- second review -->
           <div class="card bg-base-100 p-9 border border-gray-400">
             <figure>
-              <img class="w-36" src="/images//others/user-2.png" alt="Shoes" />
+              <img class="w-36" src="images/others/user-2.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <p>
@@ -349,7 +349,7 @@
           <!-- third review -->
           <div class="card bg-base-100 p-9 border border-gray-400">
             <figure>
-              <img class="w-36" src="/images//others/user-3.png" alt="Shoes" />
+              <img class="w-36" src="images/others/user-3.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <p>
