--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
           <p>License</p>
         </div>
 
-        <div class="flex gap-3 pb-4">
+        <div class="grid lg:grid-cols-6 grid-cols-3 md:grid-cols-6 gap-3 pb-4">
           <p>About</p>
           <p>Features</p>
           <p>Pricing</p>
