added Features bike

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 <li><a>Contact</a></li>
               </ul>
             </div>
-            <a class="btn btn-ghost normal-case text-2xl lg:text-4xl"
-              >Bike Dekho</a
-            >
+            <h1 class="normal-case font-bold text-2xl lg:text-3xl">
+              Bike Dekho
+            </h1>
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1 text-base">
@@ -84,7 +84,9 @@
             </ul>
           </div>
           <div class="">
-            <a class="btn btn-err text-white bg-bike-primary">Login</a>
+            <button class="btn p-5 py-4 bg-bike-primary hover:bg-red-400 text-white">
+              Login
+            </button>
           </div>
         </div>
       </nav>
@@ -193,8 +195,18 @@
       </div>
     </header>
     <main class="md:container md:mx-auto">
-      <section>
+      <section class="my-24">
         <!-- featured bike -->
+        <h3 class="lg:text-5xl text-2xl font-semibold text-center">
+          Features Bikes In This Year
+        </h3>
+        <p class="text-center text-red-500 mt-2">Best bike collection</p>
+        <div class="flex lg:flex-row flex-col items-center justify-around gap-12 mt-14">
+          <img class="w-[250px] h-[223px]" src="images/others/feature-bike.png" alt="" />
+          <img class="w-[250px] h-[223px]" src="images/others/feature-bike.png" alt="" />
+          <img class="w-[250px] h-[223px]" src="images/others/feature-bike.png" alt="" />
+          
+        </div>
       </section>
       <section class="my-24">
         <!-- latest bikes -->
