--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </style>
   </head>
   <body class="font-poppins">
-    <header class="md:container md:mx-auto">
+    <header class="md:max-w-5xl md:mx-auto">
       <nav>
         <div class="navbar bg-base-100">
           <div class="flex-1">
@@ -194,7 +194,7 @@
         </div>
       </div>
     </header>
-    <main class="md:container md:mx-auto">
+    <main class="md:max-w-5xl md:mx-auto">
       <section class="my-24">
         <!-- featured bike -->
         <h3 class="lg:text-5xl text-2xl font-semibold text-center">
