--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
             </ul>
           </div>
           <div class="">
-            <button class="btn p-5 py-4 bg-bike-primary hover:bg-red-400 text-white">
+            <button
+              class="btn p-5 py-4 bg-bike-primary hover:bg-red-400 text-white"
+            >
               Login
             </button>
           </div>
@@ -201,11 +203,24 @@
           Features Bikes In This Year
         </h3>
         <p class="text-center text-red-500 mt-2">Best bike collection</p>
-        <div class="flex lg:flex-row flex-col items-center justify-around gap-12 mt-14">
-          <img class="w-[250px] h-[223px]" src="images/others/feature-bike.png" alt="" />
-          <img class="w-[250px] h-[223px]" src="images/others/feature-bike.png" alt="" />
-          <img class="w-[250px] h-[223px]" src="images/others/feature-bike.png" alt="" />
-          
+        <div
+          class="flex lg:flex-row flex-col items-center justify-around gap-12 mt-14"
+        >
+          <img
+            class="w-[250px] h-[223px]"
+            src="images/others/feature-bike.png"
+            alt=""
+          />
+          <img
+            class="w-[250px] h-[223px]"
+            src="images/others/feature-bike.png"
+            alt=""
+          />
+          <img
+            class="w-[250px] h-[223px]"
+            src="images/others/feature-bike.png"
+            alt=""
+          />
         </div>
       </section>
       <section class="my-24">
